<resources>
    <string name="app_name">White Sound</string>
    <string name="txt_agp_btn_nueva_partitura">Nueva partitura</string>
    <string name="txt_agp_tv_partituras_anteriores">Partituras anteriores</string>
    <string name="txt_pdp_tv_autor">Autor</string>
    <string name="txt_pdp_et_nombre_autor">Nombre del autor</string>
    <string name="txt_pdp_tv_titulo_partitura">Título de la partitura</string>
    <string name="txt_pdp_et_nombre_partitura">Nombre de partitura</string>
    <string name="txt_pdp_btn_cancelar">Cancelar</string>
    <string name="txt_pdp_btn_aceptar">Aceptar</string>
    <string name="txt_lp_tv_nombre_archivo_partitura">archivo</string>
    <string name="txt_aep_tv_titulo">Sin título</string>
    <string name="txt_aep_tv_autor">Sin autor</string>
    <string name="txt_pap_imgbtn_eliminar_partitura">Eliminar partitura</string>
    <string name="txt_pap_imgbtn_editar_partitura">Editar partitura</string>
    <string name="txt_miep_figuras_musicales">Figuras musicales, negra</string>
    <string name="txt_miep_silencios">Silencios, silencio de negra</string>
    <string name="txt_lsm_tv_nombre_silencio">Silencio musical</string>
    <string name="txt_lfm_tv_nombre_figura">Figura musical</string>
    <string name="txt_miep_alteraciones">Alteraciones, sostenido</string>
    <string name="txt_mt_ajustes">Ajustes</string>
    <string name="fl_tv_partitura_vacia">Partitura vacía</string>
    <string name="fe_tv_agregar_nota">Agregar nota</string>
    <string name="txt_prj_tv_resultados">Resultados</string>
    <string name="txt_prj_tv_aciertos">Aciertos: %1$d</string>
    <string name="txt_prj_tv_fallos">Fallos: %1$d</string>
    <string name="txt_prj_tv_precision">Precisión: %1$s</string>
    <string name="txt_prj_btn_reiniciar">Reiniciar</string>
    <string name="txt_prj_btn_salir">Salir</string>
    <string name="txt_ah_btn_juegos">Juegos rítmicos</string>
    <string name="cd_fe_imgbtn_modo_lectura">Cambiar a modo lectura</string>
    <string name="cd_imgbtn_desplazar_izq">Desplazar a la izquierda</string>
    <string name="cd_imgbtn_desplazar_der">Desplazar a la derecha</string>
    <string name="cd_imgbtn_subir_altura">Subir altura</string>
    <string name="cd_imgbtn_bajar_altura">Bajar altura</string>
    <string name="cd_fe_imgbtn_añadir_nota">Añadir negra</string>
    <string name="txt_tv_nota">Nota</string>
    <string name="hnt_fe_et_titulo">Título de partitura</string>
    <string name="hnt_fe_et_autor">Nombre del autor</string>
    <string name="txt_fjh_btn_altura">Práctica de altura</string>
    <string name="txt_fjh_btn_duracion">Práctica de duración</string>
    <string name="txt_fjh_btn_combinado">Práctica combinada</string>
    <string name="txt_fjr_tv_tiempo">Tiempo</string>
    <string name="txt_fjr_imgbtn_repetir_nota">Repetir nota</string>
    <string name="fjr_imgbtn_responder">Respuesta: %1$s</string>
    <string name="cd_fe_imgbtn_modo_edicion">Cambiar a modo edición</string>
    <string name="cd_fl_imgbtn_reproducir">Reproducir partitura</string>
    <string name="cd_fl_imgbtn_pausar">Pausar Reproducción</string>
    <string name="cd_fl_imgbtn_reiniciar">Reiniciar reproducción de partitura</string>
    <string name="title_activity_informacion">InformacionActivity</string>
    <string name="txt_mt_inicio">Inicio</string>
    <string name="txt_mt_volver">Volver</string>
    <string name="txt_mt_salir">Salir</string>
    <string name="txt_pap_imgbtn_lectura_partitura">Lectura de partitura</string>
    <string-array name="titulos_info_inicio">
        <item>Información inicio</item>
        <item>Menú superior</item>
        <item>Botón “Nueva partitura”</item>
        <item>Botón “Juegos rítmicos”</item>
        <item>Lista de partituras anteriores</item>
    </string-array>
    <string-array name="descripciones_info_inicio">
        <item>En este momento se encuentra en la pantalla de inicio, de arriba a abajo se compone de los siguientes elementos:
                \n\n1. Menú superior.
                \n2.   Botón “Nueva partitura”.
                \n3.   Botón “Juegos rítmicos”.
                \n4.   Lista de partituras anteriores.
        </item>
        <item>En el menú superior encontrará los siguientes elementos de izquierda a derecha:
                \n\n1. Título de la pantalla: Es una etiqueta que le indica la pantalla en la que se encuentra, en este caso tendrá el nombre “Inicio”.
                \n\n2. Botón “Información”: Este botón abrirá una guía de la pantalla en la que se encuentra, en este caso la guía de la pantalla “Inicio”.
                \n\n3. Botón “Salir”: Este botón cerrará la aplicación.
        </item>
        <item>Al presionar el botón, se abrirá una ventana emergente con los siguientes elementos:
                \n\n1. Etiqueta “Título de la partitura”.
                \n\n2. Cuadro de texto “Nombre de la partitura”: En este cuadro se puede poner un nombre a la nueva partitura, en caso de no hacerlo, se pondrá el nombre “Sin título”.
                \n\n3. Etiqueta “Autor”.
                \n\n4. Cuadro de texto “Nombre del autor”: En este cuadro se puede poner el nombre del autor de la nueva partitura, en caso de no hacerlo, se pondrá el nombre “Sin autor”.
                \n\n5. Botón "Aceptar": Se creará la nueva partitura con la información proporcionada y se abrirá la pantalla de “edición”.
                \n\n6. Botón "Cancelar": Regresa a la pantalla “inicio” sin crear una nueva partitura.
        </item>
        <item>Al presionar el botón, se abrirá la pantalla de juegos para practicar la altura y duración de las notas.</item>
        <item>En caso de haber creado partituras anteriormente, se mostrará la etiqueta “Partituras anteriores” y debajo de esta se encontrará la lista que contiene todas estas partituras. Al pulsar alguna partitura de la lista aparecerá una ventana emergente con los siguientes elementos:
                \n\n1. Botón “Editar partitura”: Se abrirá la pantalla de edición con la partitura elegida y los últimos cambios con los que se ha guardado.
                \n\n2. Botón “Lectura de partitura”: Se abrirá la pantalla de lectura con la partitura elegida y los últimos cambios con los que se ha guardado.
                \n\n3. Botón “Eliminar partitura”: Se eliminará la partitura seleccionada del dispositivo móvil.
                \n\n4. Botón "Cancelar": Regresa a la pantalla “inicio”.
        </item>
    </string-array>
    <string-array name="titulos_info_juegos">
        <item>Información juegos</item>
        <item>Menú superior</item>
        <item>Botón “Práctica de altura”</item>
        <item>Botón “Práctica de duración”</item>
        <item>Botón “Práctica combinada”</item>
    </string-array>
    <string-array name="descripciones_info_juegos">
        <item>En este momento se encuentra en la pantalla principal de juegos, de arriba a abajo se compone de los siguientes elementos:
                \n\n1. Menú superior.
                \n2.   Botón “Práctica de altura”.
                \n3.   Botón “Práctica de duración”.
                \n4.   Botón “Práctica combinada”.
        </item>
        <item>En el menú superior encontrará los siguientes elementos de izquierda a derecha:
                \n\n1. Título de la pantalla: Es una etiqueta que le indica la pantalla en la que se encuentra, en este caso tendrá el nombre “Juegos”.
                \n\n2. Botón “Información”: Este botón abrirá una guía de la pantalla en la que se encuentra, en este caso la guía de la pantalla principal de juegos.
                \n\n3. Botón “Inicio”: Este botón dirigirá al usuario a la pantalla de inicio.
        </item>
        <item>Al presionar el botón, empezará la práctica de altura, en donde deberá intentar acertar la altura de las notas que se reproducirán en un lapso de 2 minutos.</item>
        <item>Al presionar el botón, empezará la práctica de duración, en donde deberá intentar acertar la duración de las notas que se reproducirán en un lapso de 2 minutos.</item>
        <item>Al presionar el botón, empezará la práctica combinada, en donde deberá intentar acertar la altura y duración de las notas que se reproducirán en un lapso de 2 minutos.</item>
    </string-array>
    <string-array name="titulos_info_practica_altura">
        <item>Información práctica de altura</item>
        <item>Menú superior</item>
        <item>Etiqueta de tiempo restante</item>
        <item>Etiqueta de respuesta actual</item>
        <item>Botones de acción</item>
        <item>Menú inferior</item>
    </string-array>
    <string-array name="descripciones_info_practica_altura">
        <item>En este momento se encuentra en la pantalla de práctica de altura, de arriba a abajo se compone de los siguientes elementos:
            \n\n1.	Menú superior.
            \n2.	Etiqueta de tiempo restante.
            \n3.	Etiqueta de respuesta actual.
            \n4.	Botones de acción.
            \n5.	Menú inferior.
        </item>
        <item>En el menú superior encontrará los siguientes elementos de izquierda a derecha:
                \n\n1. Título de la pantalla: Es una etiqueta que le indica la pantalla en la que se encuentra, en este caso tendrá el nombre “Altura”.
                \n\n2. Botón “Información”: Este botón abrirá una guía de la pantalla en la que se encuentra, en este caso la guía de la pantalla de practica de altura.
                \n\n3. Botón “Inicio”: Este botón dirigirá al usuario a la pantalla de inicio.
        </item>
        <item>Esta etiqueta le indicará el tiempo que falta para que termine la práctica, al llegar a 0 se mostrará una ventana emergente con los siguientes elementos:
            \n\n1.	Etiqueta “Resultados”.
            \n\n2.	Etiqueta “Aciertos”: Le indicará el número de aciertos que tuvo durante la práctica.
            \n\n3.	Etiqueta “Fallos”: Le indicará el número de fallos que tuvo durante la práctica.
            \n\n4.	Etiqueta “Precisión”: Le indicará el porcentaje de precisión con base a los aciertos y fallos que haya tenido en la práctica.
            \n\n5.	Botón “Reiniciar”: Se repetirá la práctica en la que se encuentra actualmente.
            \n\n6.	Botón “Salir”: Se redirigirá a la pantalla principal de juegos.
        </item>
        <item>Muestra la respuesta actual y puede ser cambiada mediante los botones de acción y la opción del menú inferior para agregar una alteración. Al acertar una nota o al iniciar la práctica, se establecerá en “Do”.</item>
        <item>De izquierda a derecha, los botones de acción son:
            \n\n1.	Botón “Subir altura”: Se aumentará la altura de la respuesta en el orden Do, Re, Mi, Fa, Sol, La, Si.
            \n\n2.	Botón “Bajar altura”: Se disminuirá la altura de la respuesta en el orden Si, La, Sol, Fa, Mi, Re, Do.
            \n\n3.	Botón “Reproducir nota”: Se reproducirá nuevamente la nota que se le está preguntando.
            \n\n4.	Botón “Responder”: Se comprobará si su respuesta es correcta. Si es el caso, se le avisara y se reproducirá una nueva nota, si no, se le avisara que la respuesta es incorrecta.
        </item>
        <item>En el menú inferior se encuentra el siguiente elemento:
            \n\n1.	Botón “Alteraciones”: Al pulsarlo, se abrirá una ventana emergente donde podrá agregar o quitar una alteración a la respuesta. La ventana se compone de los siguientes elementos.
                \na.	Sostenido.
                \nb.	Bemol.
                \nc.	Sin alteración.
        </item>
    </string-array>
    <string-array name="titulos_info_practica_duracion">
        <item>Información práctica de duración</item>
        <item>Menú superior</item>
        <item>Etiqueta de tiempo restante</item>
        <item>Etiqueta de respuesta actual</item>
        <item>Botones de acción</item>
        <item>Menú inferior</item>
    </string-array>
</resources>