<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fondo_color_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.EdicionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/fe_imgbtn_modo_lectura"
            style="@style/boton_imagen_color_3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cd_fe_imgbtn_modo_lectura"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_lectura"
            app:layout_constraintBottom_toBottomOf="@+id/fe_et_autor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fe_et_titulo" />

        <EditText
            android:id="@+id/fe_et_titulo"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/txt_aep_tv_titulo"
            android:textSize="32sp"
            android:minHeight="48dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_modo_lectura"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hnt_fe_et_titulo"
            android:autofillHints="@string/txt_aep_tv_titulo" />

        <EditText
            android:id="@+id/fe_et_autor"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/txt_aep_tv_autor"
            android:textSize="28sp"
            android:minHeight="48dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_modo_lectura"
            app:layout_constraintTop_toBottomOf="@+id/fe_et_titulo"
            android:hint="@string/hnt_fe_et_autor"
            android:autofillHints="@string/txt_aep_tv_autor" />

        <include
            android:id="@+id/fe_menu_inferior"
            layout="@layout/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"></include>

        <ImageButton
            android:id="@+id/fe_imgbtn_desplazar_izq"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_desplazar_izq"
            android:rotation="-180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_desplazar"
            app:layout_constraintBottom_toTopOf="@+id/fe_menu_inferior"
            app:layout_constraintEnd_toStartOf="@+id/fe_imgbtn_desplazar_der"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/fe_imgbtn_desplazar_der"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_desplazar_der"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_desplazar"
            app:layout_constraintBottom_toTopOf="@+id/fe_menu_inferior"
            app:layout_constraintEnd_toStartOf="@+id/fe_imgbtn_subir_altura"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_desplazar_izq" />

        <ImageButton
            android:id="@+id/fe_imgbtn_subir_altura"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_subir_altura"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_altura"
            app:layout_constraintBottom_toTopOf="@+id/fe_menu_inferior"
            app:layout_constraintEnd_toStartOf="@+id/fe_imgbtn_bajar_altura"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_desplazar_der" />

        <ImageButton
            android:id="@+id/fe_imgbtn_bajar_altura"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_bajar_altura"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_altura"
            app:layout_constraintBottom_toTopOf="@+id/fe_menu_inferior"
            app:layout_constraintEnd_toStartOf="@+id/fe_imgbtn_añadir_nota"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_subir_altura" />

        <ImageButton
            android:id="@+id/fe_imgbtn_añadir_nota"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_fe_imgbtn_añadir_nota"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_negra"
            app:layout_constraintBottom_toTopOf="@+id/fe_menu_inferior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_bajar_altura" />

        <TextView
            android:id="@+id/fe_tv_nota"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_tv_nota"
            android:textAlignment="center"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fe_imgbtn_subir_altura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fe_et_autor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>