<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clr_e"
    android:layout_gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/prj_tv_resultados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_prj_tv_resultados"
        android:textColor="@color/clr_b"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prj_tv_aciertos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_prj_tv_aciertos"
        android:textColor="@color/clr_a"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prj_tv_resultados" />

    <TextView
        android:id="@+id/prj_tv_fallos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_prj_tv_fallos"
        android:textColor="@color/clr_a"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prj_tv_aciertos" />

    <TextView
        android:id="@+id/prj_tv_precision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_prj_tv_precision"
        android:textColor="@color/clr_a"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prj_tv_fallos" />

    <Button
        android:id="@+id/prj_btn_reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/clr_b"
        android:text="@string/txt_prj_btn_reiniciar"
        android:textColor="@color/clr_e"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/prj_btn_salir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prj_tv_precision" />

    <Button
        android:id="@+id/prj_btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/clr_b"
        android:text="@string/txt_prj_btn_salir"
        android:textColor="@color/clr_e"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prj_btn_reiniciar"
        app:layout_constraintTop_toBottomOf="@+id/prj_tv_precision" />
</androidx.constraintlayout.widget.ConstraintLayout>