<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fondo_color_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.LecturaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/fe_imgbtn_modo_edicion"
            style="@style/boton_imagen_color_3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cd_fe_imgbtn_modo_edicion"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_editar_partitura"
            app:layout_constraintBottom_toBottomOf="@+id/fl_tv_autor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fl_tv_titulo" />

        <TextView
            android:id="@+id/fl_tv_titulo"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/txt_aep_tv_titulo"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_modo_edicion"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fl_tv_autor"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/txt_aep_tv_autor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fe_imgbtn_modo_edicion"
            app:layout_constraintTop_toBottomOf="@+id/fl_tv_titulo" />

        <ImageButton
            android:id="@+id/fl_imgbtn_desplazar_izq"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_desplazar_izq"
            android:rotation="-180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_desplazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fl_imgbtn_desplazar_der"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/fl_imgbtn_desplazar_der"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_imgbtn_desplazar_der"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_desplazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fl_imgbtn_reproducir"
            app:layout_constraintStart_toEndOf="@+id/fl_imgbtn_desplazar_izq" />

        <ImageButton
            android:id="@+id/fl_imgbtn_reproducir"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_fl_imgbtn_reproducir"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_reproducir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fl_imgbtn_pausar"
            app:layout_constraintStart_toEndOf="@+id/fl_imgbtn_desplazar_der" />

        <ImageButton
            android:id="@+id/fl_imgbtn_pausar"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_fl_imgbtn_pausar"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pausar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fl_imgbtn_reiniciar"
            app:layout_constraintStart_toEndOf="@+id/fl_imgbtn_reproducir" />

        <ImageButton
            android:id="@+id/fl_imgbtn_reiniciar"
            style="@style/boton_imagen_color_3"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_fl_imgbtn_reiniciar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_reiniciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fl_imgbtn_pausar"/>

        <TextView
            android:id="@+id/fl_tv_nota"
            style="@style/texto_color_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_tv_nota"
            android:textAlignment="center"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fl_imgbtn_reproducir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_tv_autor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>