<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clr_e"
    android:layout_gravity="center"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/pop_imgbtn_eliminar_partitura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_clr_d"
        android:contentDescription="@string/txt_pap_imgbtn_eliminar_partitura"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_eliminar_partitura"
        app:layout_constraintEnd_toStartOf="@+id/pop_imgbtn_editar_partitura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pop_imgbtn_editar_partitura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_clr_d"
        android:contentDescription="@string/txt_pap_imgbtn_editar_partitura"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_editar_partitura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pop_imgbtn_eliminar_partitura"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pop_btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_clr_b"
        android:text="@string/txt_pdp_btn_cancelar"
        android:textColor="@color/clr_e"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_imgbtn_editar_partitura" />
</androidx.constraintlayout.widget.ConstraintLayout>